@@ -28,6 +28,8 @@ V0.25-svn
 * Try to reduce the chances that a .part file is left lying around
 * [Naxos] increase the preferred download count to 4
 * Add detection and notification of a network failure
+* If a prefs dialogue will be shown on the first startup, only start downloads
+  once it's gone, so that things like download directories are picked up.
 V0.25
 * Overhauled the filename cleaning stuff, hopefully finally fixing issues on
   windows. (#56)
